--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <source src="audio/fine-line.mp3" type="audio/mpeg">
    </audio>
    
-   <section id="contenedor-musica-flotante" class="solo-premium" style="display: none;">
+   <section id="contenedor-musica-flotante" style="display: none;">
        <button id="boton-play-flotante" class="estilo-boton-float">
            <i class="fas fa-pause"></i>
        </button>
@@ -52,7 +52,7 @@
                <h2><strong>XV</strong> MELLIS</h2>
                <section class="separador-elegante-1"></section>
 
-               <section id="cuenta-regresiva" class="solo-intermedio solo-premium" aria-label="Tiempo restante">
+               <section id="cuenta-regresiva" aria-label="Tiempo restante">
                    <h2 id="mensaje-contador" class="mensaje-es-hoy"></h2>
                    <ul class="contenedor-contador">
                        <li id="li-dias" class="caja-tiempo"><span id="dias" class="numero-tiempo">--</span><span class="texto-tiempo">Días</span></li>
@@ -94,7 +94,7 @@
            </article>
        </section>
 
-       <section id="galeria-fotos" class="solo-premium" aria-label="Galería de fotos">
+       <section id="galeria-fotos" aria-label="Galería de fotos">
            <article class="carrusel-marco-full">
                <button class="btn-flecha flecha-izq"><i class="fas fa-chevron-left"></i></button>
                <ul class="carrusel-track-auto" id="track-fotos-auto">
@@ -118,7 +118,7 @@
                <p class="nota-dresscode">EL COLOR <strong>BLANCO</strong> SE RESERVA <br> PARA LAS QUINCEAÑERAS</p>
            </article>
 
-           <article class="bloque-info estilo-claro solo-premium">
+           <article class="bloque-info estilo-claro solo-intermedio solo-premium">
                <section class="icono-animado-container">
                    <i class="fas fa-camera icono-flash color-verde"></i>
                </section>
@@ -127,7 +127,7 @@
                <a href="#" target="_blank" class="boton-mapa btn-oscuro">SUBIR FOTOS</a>
            </article>
 
-           <article class="bloque-info estilo-oscuro solo-premium">
+           <article class="bloque-info estilo-oscuro solo-intermedio solo-premium">
                <section class="icono-animado-container">
                    <i class="fas fa-envelope-open-text icono-bouncing color-blanco"></i>
                </section>
@@ -137,8 +137,7 @@
                <form id="form-rsvp" class="formulario-rsvp">
                    <input type="hidden" name="tipoFormulario" value="rsvp">
                    <section class="campo-form">
-                       <input type="text" id="nombre" name="nombre" list="lista-invitados" placeholder="Escribe tu nombre..." required>
-                       <datalist id="lista-invitados"></datalist>
+                       <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre..." required>
                    </section>
                    <input type="hidden" id="cantidad_total" name="cantidad_total" value="1">
                    <section class="campo-form">
@@ -156,7 +155,7 @@
                </form>
            </article>
 
-           <article class="bloque-info estilo-oscuro solo-estandar solo-intermedio">
+           <article class="bloque-info estilo-oscuro solo-estandar">
                 <section class="icono-animado-container">
                     <i class="fab fa-whatsapp icono-bouncing color-blanco" style="font-size: 4rem;"></i>
                 </section>
@@ -192,7 +191,7 @@
                <button class="boton-mapa btn-premium-fill">DEJAR UN RECUERDO</button>
            </article>
 
-           <article class="bloque-info estilo-oscuro solo-premium">
+           <article class="bloque-info estilo-oscuro">
                <section class="icono-animado-container"><i class="fab fa-spotify icono-bouncing color-blanco"></i></section>
                <h3>MÚSICA</h3>
                <p class="texto-detalle">¡Sugerí canciones para la fiesta!</p>
@@ -214,14 +213,13 @@
        <footer>
             <section class="footer-content">
                 <div class="footer-brand">
-                    <img src="img/sin-fondo-claro.png" alt="TuTarjeta" class="footer-logo">
-                    <p>Invitaciones que conectan.</p>
+                    <p>©tuTarjeta.ar</p>
                 </div>
                 <nav class="footer-social">
                     <a href="https://instagram.com/tutarjeta.ar" target="_blank" class="btn-social">
                         <i class="fab fa-instagram"></i> Instagram
                     </a>
-                    <a href="https://wa.me/549XXXX" target="_blank" class="btn-social">
+                    <a href="https://wa.me/5493815516415" target="_blank" class="btn-social">
                         <i class="fab fa-whatsapp"></i> WhatsApp
                     </a>
                 </nav>
